--- a/src/Home/UserSurveys/styles.scss
+++ b/src/Home/UserSurveys/styles.scss
@@ -29,5 +29,7 @@
 
   ion-item-sliding {
     box-shadow: 0 0 30px #0000001f;
+    max-width: 600px;
+    margin: 0 auto;
   }
 }
