--- a/src/Info/Credits/styles.scss
+++ b/src/Info/Credits/styles.scss
@@ -2,4 +2,10 @@
   ul {
     list-style-type: none;
   }
+
+  a.logo {
+    max-width: 300px;
+    margin: 0 auto;
+    display: block;
+  }
 }
